third lab edit1